# FileSorter

./: CMakeLists.txt  test.txt
src/: CMakeLists.txt  plots.py
src/const/: cmdConst.h  const.h  outputFileNames.h
src/fileHandler/: CMakeLists.txt  fileHandler.cpp  fileHandler.h  inputHandler.cpp  inputHandler.h  outputHandler.cpp  outputHandler.h
src/main/: CMakeLists.txt  main.cpp  mainController.cpp  mainController.h
src/record/: CMakeLists.txt  record.cpp  record.h
src/sorter/: CMakeLists.txt  sorter.cpp  sorter.h
src/sorter/sortingAlgorithms/: mergeWithLargeBuffersSort.cpp  mergeWithLargeBuffersSort.h  naturalMergeSort.cpp  naturalMergeSort.h  sortingStrategy.h
tests/: CMakeLists.txt  recordTest.cpp
